--- a/css/styles.css
+++ b/css/styles.css
@@ -2905,6 +2905,33 @@ img.u-pull-left {
     margin-bottom: var(--vspace-0_25);
 }
 
+.list-block__icon_title {
+    margin-bottom: var(--vspace-0_5);
+}
+
+.show-ctr .list-block__icon_title::before {
+    display: flex;
+    justify-content: start;
+    gap: 10px;
+    font-family: var(--font-2);
+    font-weight: 600;
+    font-size: 1.25em;
+    line-height: 1;
+    color: var(--color-1);
+    margin-bottom: var(--vspace-0_25);
+}
+
+.list-block__dark_icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: var(--vspace-1_75);
+    width: var(--vspace-1_75);
+    border-radius: 50%;
+    background-color: var(--color-white);
+    margin-bottom: var(--vspace-0_25);
+}
+
 .list-block__icon {
     display: flex;
     align-items: center;
@@ -3374,7 +3401,7 @@ img.u-pull-left {
     --content-padding-top: 20vh;
     --content-padding-bottom: 9.6rem;
     z-index: 3;
-    background-color: #1C1C24;
+    background-color: #161616;
     width: 100%;
     height: 100vh;
     min-height: calc(25.5 * var(--space));
@@ -3446,7 +3473,7 @@ img.u-pull-left {
 
 .s-intro__content-bg {
     display: block;
-    background-image: url(../images/HeroSectionImg.webp);
+    background-image: url(../images/HeroSectionImg2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -3808,8 +3835,6 @@ img.u-pull-left {
 
 /* ===================================================================
  * # ABOUT
- *
- *
  * ------------------------------------------------------------------- */
 .s-about {
     padding-top: var(--vspace-5);
